; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/wordpad/extr_print.c_init_preview.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/wordpad/extr_print.c_init_preview.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i64, i64, i32, i64, i64 }

@preview = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@TRUE = common dso_local global i32 0, align 4
@wszPreviewWndClass = common dso_local global i32 0, align 4
@WS_VISIBLE = common dso_local global i32 0, align 4
@WS_CHILD = common dso_local global i32 0, align 4
@WS_VSCROLL = common dso_local global i32 0, align 4
@WS_HSCROLL = common dso_local global i32 0, align 4
@IDC_PREVIEW = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @init_preview(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = call i32 @GetModuleHandleW(i32 0)
  store i32 %6, i32* %5, align 4
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @preview, i32 0, i32 0), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @preview, i32 0, i32 5), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @preview, i32 0, i32 4), align 8
  %7 = load i32, i32* %4, align 4
  store i32 %7, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @preview, i32 0, i32 3), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @preview, i32 0, i32 2), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @preview, i32 0, i32 1), align 8
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @TRUE, align 4
  %10 = call i32 @preview_bar_show(i32 %8, i32 %9)
  %11 = load i32, i32* @wszPreviewWndClass, align 4
  %12 = load i32, i32* @WS_VISIBLE, align 4
  %13 = load i32, i32* @WS_CHILD, align 4
  %14 = or i32 %12, %13
  %15 = load i32, i32* @WS_VSCROLL, align 4
  %16 = or i32 %14, %15
  %17 = load i32, i32* @WS_HSCROLL, align 4
  %18 = or i32 %16, %17
  %19 = load i32, i32* %3, align 4
  %20 = load i64, i64* @IDC_PREVIEW, align 8
  %21 = trunc i64 %20 to i32
  %22 = load i32, i32* %5, align 4
  %23 = call i32 @CreateWindowExW(i32 0, i32 %11, i32* null, i32 %18, i32 0, i32 0, i32 200, i32 10, i32 %19, i32 %21, i32 %22, i32* null)
  ret void
}

declare dso_local i32 @GetModuleHandleW(i32) #1

declare dso_local i32 @preview_bar_show(i32, i32) #1

declare dso_local i32 @CreateWindowExW(i32, i32, i32*, i32, i32, i32, i32, i32, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
